--- a/src/main/resources/armor.yml
+++ b/src/main/resources/armor.yml
@@ -1,4 +1,3 @@
-# Armor Category Configuration
 category:
   display-name: "Armor"
   icon: DIAMOND_CHESTPLATE
@@ -10,7 +9,7 @@ defaults:
   initial-stock: 30
 
 items:
-  # Leather Armor
+  # --- Leather ---
   LEATHER_HELMET:
     price: 20.0
     max-stock: 500
@@ -24,7 +23,7 @@ items:
     price: 20.0
     max-stock: 500
 
-  # Chainmail Armor
+  # --- Chainmail ---
   CHAINMAIL_HELMET:
     price: 60.0
     max-stock: 300
@@ -38,39 +37,39 @@ items:
     price: 60.0
     max-stock: 300
 
-  # Iron Armor
+  # --- Iron ---
   IRON_HELMET:
     price: 80.0
+    max-stock: 400
   IRON_CHESTPLATE:
     price: 160.0
+    max-stock: 400
   IRON_LEGGINGS:
     price: 140.0
+    max-stock: 400
   IRON_BOOTS:
     price: 80.0
+    max-stock: 400
 
-  # Golden Armor
+  # --- Golden ---
   GOLDEN_HELMET:
     price: 200.0
-    max-stock: 100
-    initial-stock: 20
+    max-stock: 200
   GOLDEN_CHESTPLATE:
     price: 400.0
-    max-stock: 100
-    initial-stock: 20
+    max-stock: 200
   GOLDEN_LEGGINGS:
     price: 350.0
-    max-stock: 100
-    initial-stock: 20
+    max-stock: 200
   GOLDEN_BOOTS:
     price: 200.0
-    max-stock: 100
-    initial-stock: 20
+    max-stock: 200
 
-  # Diamond Armor
+  # --- Diamond ---
   DIAMOND_HELMET:
     price: 800.0
     max-stock: 50
-    initial-stock: 10
+    initial-stock: 10  # Fix: stock max basso
   DIAMOND_CHESTPLATE:
     price: 1600.0
     max-stock: 50
@@ -84,53 +83,50 @@ items:
     max-stock: 50
     initial-stock: 10
 
-  # Netherite Armor
+  # --- Netherite (Initial Stock fissato basso) ---
   NETHERITE_HELMET:
     price: 5000.0
-    max-stock: 5
-    initial-stock: 1
+    max-stock: 10
+    initial-stock: 2
   NETHERITE_CHESTPLATE:
     price: 10000.0
-    max-stock: 5
-    initial-stock: 1
+    max-stock: 10
+    initial-stock: 2
   NETHERITE_LEGGINGS:
     price: 8000.0
-    max-stock: 5
-    initial-stock: 1
+    max-stock: 10
+    initial-stock: 2
   NETHERITE_BOOTS:
     price: 5000.0
+    max-stock: 10
+    initial-stock: 2
+
+  # --- Special ---
+  TURTLE_HELMET:
+    price: 300.0
+    max-stock: 50
+    initial-stock: 10
+  ELYTRA:
+    price: 20000.0
     max-stock: 5
     initial-stock: 1
 
-  # Special Armor
-  # Turtle Helmet lowered to 300 to prevent Scute crafting exploit
-  TURTLE_HELMET:
-    price: 300.0
-    max-stock: 80
-    initial-stock: 15
-  ELYTRA:
-    price: 20000.0
-    max-stock: 3
-    initial-stock: 1
-
-  # Horse Armor
+  # --- Horse & Wolf Armor ---
   LEATHER_HORSE_ARMOR:
     price: 100.0
-    max-stock: 300
-    initial-stock: 50
+    max-stock: 200
   IRON_HORSE_ARMOR:
     price: 500.0
-    max-stock: 150
-    initial-stock: 25
-  GOLDEN_HORSE_ARMOR:
-    price: 800.0
     max-stock: 100
     initial-stock: 20
+  GOLDEN_HORSE_ARMOR:
+    price: 800.0
+    max-stock: 80
+    initial-stock: 15
   DIAMOND_HORSE_ARMOR:
     price: 2000.0
-    max-stock: 50
-    initial-stock: 10
+    max-stock: 40
+    initial-stock: 5
   WOLF_ARMOR:
     price: 300.0
-    max-stock: 200
-    initial-stock: 40
+    max-stock: 150
