--- a/src/main/resources/farming.yml
+++ b/src/main/resources/farming.yml
@@ -1,4 +1,3 @@
-# Farming Category Configuration
 category:
   display-name: "Farming"
   icon: WHEAT
@@ -6,97 +5,128 @@ category:
 
 defaults:
   min-stock: 0
-  max-stock: 5000
-  initial-stock: 300
+  max-stock: 1000
+  initial-stock: 100
 
 items:
-  # --- Crops ---
+  # --- Basic Crops ---
   WHEAT_SEEDS:
     price: 1.0
+    max-stock: 3000
   WHEAT:
     price: 3.0
+    max-stock: 3000
   HAY_BLOCK:
     price: 27.0
   CARROT:
     price: 3.0
+    max-stock: 3000
   POTATO:
     price: 3.0
+    max-stock: 3000
   BEETROOT_SEEDS:
     price: 2.0
+    max-stock: 2000
   BEETROOT:
     price: 2.0
+    max-stock: 2000
   PUMPKIN_SEEDS:
     price: 3.0
   PUMPKIN:
     price: 10.0
+    max-stock: 1500
   MELON_SEEDS:
     price: 2.0
   MELON:
     price: 15.0
+    max-stock: 1500
   MELON_SLICE:
     price: 2.0
+    max-stock: 3000
   COCOA_BEANS:
     price: 5.0
+    max-stock: 2000
   SUGAR_CANE:
     price: 3.0
+    max-stock: 4000
   BAMBOO:
     price: 1.0
+    max-stock: 4000
   BAMBOO_BLOCK:
     price: 9.0
   STRIPPED_BAMBOO_BLOCK:
     price: 9.0
   CACTUS:
     price: 3.0
-  KELP:
-    price: 2.0
-  DRIED_KELP_BLOCK:
-    price: 18.0
+    max-stock: 3000
+
+  # --- Fruits & Berries ---
+  SWEET_BERRIES:
+    price: 3.0
+    max-stock: 1500
+  GLOW_BERRIES:
+    price: 3.0
+    max-stock: 1500
+  CHORUS_FRUIT:
+    price: 8.0
+    max-stock: 1000
+  HONEYCOMB:
+    price: 10.0
+    max-stock: 500
+  HONEYCOMB_BLOCK:
+    price: 40.0
+
+  # --- Nether & End Vegetation ---
   NETHER_WART:
     price: 5.0
+    max-stock: 2500
   NETHER_WART_BLOCK:
     price: 45.0
   WARPED_WART_BLOCK:
     price: 45.0
-  GLOW_BERRIES:
-    price: 3.0
-  SWEET_BERRIES:
-    price: 3.0
-  CHORUS_FRUIT:
-    price: 8.0
-  SNIFFER_EGG:
-    price: 500.0
-  TORCHFLOWER_SEEDS:
-    price: 20.0
-  PITCHER_POD:
-    price: 20.0
-  HONEYCOMB:
-    price: 10.0
-  HONEYCOMB_BLOCK:
-    price: 40.0
-  BONE_MEAL:
+  CRIMSON_FUNGUS:
+    price: 5.0
+    max-stock: 500
+  WARPED_FUNGUS:
+    price: 5.0
+    max-stock: 500
+
+  # --- Aquatic Plants ---
+  KELP:
+    price: 2.0
+    max-stock: 4000
+  DRIED_KELP_BLOCK:
+    price: 18.0
+  SEA_PICKLE:
+    price: 2.0
+  LILY_PAD:
     price: 5.0
 
   # --- Saplings ---
   OAK_SAPLING:
     price: 5.0
+    max-stock: 500
   SPRUCE_SAPLING:
     price: 5.0
+    max-stock: 500
   BIRCH_SAPLING:
     price: 5.0
+    max-stock: 500
   JUNGLE_SAPLING:
     price: 5.0
+    max-stock: 500
   ACACIA_SAPLING:
     price: 5.0
+    max-stock: 500
   DARK_OAK_SAPLING:
     price: 5.0
+    max-stock: 500
   MANGROVE_PROPAGULE:
     price: 8.0
+    max-stock: 500
   CHERRY_SAPLING:
     price: 8.0
-  CRIMSON_FUNGUS:
-    price: 5.0
-  WARPED_FUNGUS:
-    price: 5.0
+    max-stock: 500
 
   # --- Leaves ---
   OAK_LEAVES:
@@ -147,6 +177,7 @@ items:
     price: 6.0
   WITHER_ROSE:
     price: 50.0
+    max-stock: 100
   SUNFLOWER:
     price: 6.0
   LILAC:
@@ -157,22 +188,23 @@ items:
     price: 6.0
   SPORE_BLOSSOM:
     price: 20.0
+    max-stock: 64
   TORCHFLOWER:
     price: 25.0
+    max-stock: 64
   PITCHER_PLANT:
     price: 25.0
+    max-stock: 64
   PINK_PETALS:
     price: 2.0
 
-  # --- Plants & Decor ---
+  # --- Natural Decor & Seeds ---
   SHORT_GRASS:
     price: 1.0
   FERN:
     price: 1.0
   DEAD_BUSH:
     price: 1.0
-  LILY_PAD:
-    price: 5.0
   VINE:
     price: 3.0
   GLOW_LICHEN:
@@ -185,9 +217,19 @@ items:
     price: 5.0
   SMALL_DRIPLEAF:
     price: 3.0
-  SEA_PICKLE:
-    price: 2.0
   MANGROVE_ROOTS:
     price: 4.0
   MUDDY_MANGROVE_ROOTS:
     price: 4.5
+  SNIFFER_EGG:
+    price: 500.0
+    max-stock: 16
+  TORCHFLOWER_SEEDS:
+    price: 20.0
+    max-stock: 64
+  PITCHER_POD:
+    price: 20.0
+    max-stock: 64
+  BONE_MEAL:
+    price: 5.0
+    max-stock: 2000
