--- a/src/main/resources/misc.yml
+++ b/src/main/resources/misc.yml
@@ -1,4 +1,3 @@
-# Miscellaneous Category Configuration
 category:
   display-name: "Miscellaneous"
   icon: ENDER_PEARL
@@ -7,417 +6,576 @@ category:
 defaults:
   min-stock: 0
   max-stock: 1000
-  initial-stock: 50
+  initial-stock: 100
 
 items:
-  # --- Materials ---
-  CLAY_BALL:
-    price: 1.5
-  BRICK:
-    price: 2.0
-  NETHER_BRICK:
-    price: 1.5
-  GLOWSTONE_DUST:
-    price: 3.5
-  FLINT:
-    price: 3.0
-  SNOWBALL:
-    price: 0.5
-  CHARCOAL:
-    price: 5.0
-  EGG:
-    price: 2.0
-  SUGAR:
-    price: 2.0
-  TORCH:
-    price: 2.0
-  GLISTERING_MELON_SLICE:
-    price: 45.0
-  POPPED_CHORUS_FRUIT:
-    price: 10.0
-  DRAGON_BREATH:
-    price: 20.0
-  FERMENTED_SPIDER_EYE:
-    price: 15.0
-  COBWEB:
-    price: 20.0
-  ENDER_EYE:
-    price: 30.0
-  END_CRYSTAL:
-    price: 150.0
-  FIRE_CHARGE:
-    price: 20.0
   STICK:
     price: 1.0
+    max-stock: 5000
   BOWL:
     price: 2.0
-
-  # --- Templates & Disc ---
-  NETHERITE_UPGRADE_SMITHING_TEMPLATE:
-    price: 2500.0
-  MUSIC_DISC_13:
-    price: 500.0
-  MUSIC_DISC_CAT:
-    price: 500.0
-  MUSIC_DISC_BLOCKS:
-    price: 500.0
-  MUSIC_DISC_CHIRP:
-    price: 500.0
-  MUSIC_DISC_FAR:
-    price: 500.0
-  MUSIC_DISC_MALL:
-    price: 500.0
-  MUSIC_DISC_MELLOHI:
-    price: 500.0
-  MUSIC_DISC_STAL:
-    price: 500.0
-  MUSIC_DISC_STRAD:
-    price: 500.0
-  MUSIC_DISC_WARD:
-    price: 500.0
-  MUSIC_DISC_11:
-    price: 500.0
-  MUSIC_DISC_WAIT:
-    price: 500.0
-  MUSIC_DISC_OTHERSIDE:
-    price: 800.0
-  MUSIC_DISC_PIGSTEP:
-    price: 1200.0
-  MUSIC_DISC_5:
-    price: 1500.0
-  MUSIC_DISC_RELIC:
-    price: 1500.0
-  MUSIC_DISC_CREATOR:
-    price: 1500.0
-  MUSIC_DISC_PRECIPICE:
-    price: 1500.0
-  DISC_FRAGMENT_5:
-    price: 100.0
-  GOAT_HORN:
-    price: 150.0
-  ECHO_SHARD:
-    price: 100.0
-
-  # --- Dyes ---
-  WHITE_DYE:
-    price: 4.0
-  ORANGE_DYE:
-    price: 4.0
-  MAGENTA_DYE:
-    price: 4.0
-  LIGHT_BLUE_DYE:
-    price: 4.0
-  YELLOW_DYE:
-    price: 4.0
-  LIME_DYE:
-    price: 4.0
-  PINK_DYE:
-    price: 4.0
-  GRAY_DYE:
-    price: 4.0
-  LIGHT_GRAY_DYE:
-    price: 4.0
-  CYAN_DYE:
-    price: 4.0
-  PURPLE_DYE:
-    price: 4.0
-  BLUE_DYE:
-    price: 4.0
-  BROWN_DYE:
-    price: 4.0
-  GREEN_DYE:
-    price: 4.0
-  RED_DYE:
-    price: 4.0
-  BLACK_DYE:
-    price: 4.0
-  GLOW_INK_SAC:
-    price: 3.0
-
-  # --- Corals ---
-  TUBE_CORAL_BLOCK:
-    price: 25.0
-  BRAIN_CORAL_BLOCK:
-    price: 25.0
-  BUBBLE_CORAL_BLOCK:
-    price: 25.0
-  FIRE_CORAL_BLOCK:
-    price: 25.0
-  HORN_CORAL_BLOCK:
-    price: 25.0
-
-  # --- Functional ---
-  EXPERIENCE_BOTTLE:
-    price: 50.0
-  NAME_TAG:
-    price: 80.0
-  SADDLE:
-    price: 100.0
-  LEAD:
-    price: 15.0
-  BUCKET:
-    price: 45.0
-  WATER_BUCKET:
-    price: 50.0
-  LAVA_BUCKET:
-    price: 60.0
-  MILK_BUCKET:
-    price: 60.0
-  POWDER_SNOW_BUCKET:
-    price: 60.0
-  BOOK:
-    price: 15.0
+    max-stock: 2000
   PAPER:
     price: 2.0
-  FIREWORK_ROCKET:
+    max-stock: 5000
+  BOOK:
+    price: 15.0
+    max-stock: 2000
+  FLINT:
+    price: 3.0
+    max-stock: 3000
+  CLAY_BALL:
+    price: 1.5
+    max-stock: 4000
+  BRICK:
+    price: 2.0
+    max-stock: 4000
+  NETHER_BRICK:
+    price: 1.5
+    max-stock: 4000
+  CHARCOAL:
     price: 5.0
-  FIREWORK_STAR:
-    price: 30.0
-  OMINOUS_BOTTLE:
-    price: 100.0
-  ARMOR_STAND:
-    price: 10.0
-  ITEM_FRAME:
+    max-stock: 5000
+  SNOWBALL:
+    price: 0.5
+    max-stock: 3000
+  SUGAR:
+    price: 2.0
+    max-stock: 4000
+  GLOWSTONE_DUST:
+    price: 3.5
+    max-stock: 3000
+  GLOW_INK_SAC:
+    price: 3.0
+    max-stock: 2000
+  INK_SAC:
+    price: 3.0
+    max-stock: 2000
+  FEATHER:
+    price: 1.0
+    max-stock: 3000
+  LEATHER:
+    price: 5.0
+    max-stock: 2000
+  RABBIT_HIDE:
+    price: 2.0
+    max-stock: 2000
+  SCUTE:
     price: 20.0
-  GLOW_ITEM_FRAME:
-    price: 25.0
-  PAINTING:
-    price: 15.0
-  FLOWER_POT:
-    price: 10.0
-  END_ROD:
-    price: 50.0
-  CARROT_ON_A_STICK:
-    price: 30.0
-  WARPED_FUNGUS_ON_A_STICK:
-    price: 30.0
-
-  # --- Boats ---
-  OAK_BOAT:
-    price: 10.0
-  SPRUCE_BOAT:
-    price: 10.0
-  BIRCH_BOAT:
-    price: 10.0
-  JUNGLE_BOAT:
-    price: 10.0
-  ACACIA_BOAT:
-    price: 10.0
-  DARK_OAK_BOAT:
-    price: 10.0
-  MANGROVE_BOAT:
-    price: 12.0
-  CHERRY_BOAT:
-    price: 12.0
-  BAMBOO_RAFT:
-    price: 10.0
-  OAK_CHEST_BOAT:
-    price: 25.0
-  SPRUCE_CHEST_BOAT:
-    price: 25.0
-  BIRCH_CHEST_BOAT:
-    price: 25.0
-  JUNGLE_CHEST_BOAT:
-    price: 25.0
-  ACACIA_CHEST_BOAT:
-    price: 25.0
-  DARK_OAK_CHEST_BOAT:
-    price: 25.0
-  MANGROVE_CHEST_BOAT:
-    price: 27.0
-  CHERRY_CHEST_BOAT:
-    price: 27.0
-  BAMBOO_CHEST_RAFT:
-    price: 25.0
-
-  # --- Signs ---
-  OAK_SIGN:
-    price: 5.0
-  SPRUCE_SIGN:
-    price: 5.0
-  BIRCH_SIGN:
-    price: 5.0
-  JUNGLE_SIGN:
-    price: 5.0
-  ACACIA_SIGN:
-    price: 5.0
-  DARK_OAK_SIGN:
-    price: 5.0
-  MANGROVE_SIGN:
-    price: 6.0
-  CHERRY_SIGN:
-    price: 6.0
-  BAMBOO_SIGN:
-    price: 6.0
-  CRIMSON_SIGN:
-    price: 6.0
-  WARPED_SIGN:
-    price: 6.0
-  OAK_HANGING_SIGN:
-    price: 15.0
-  SPRUCE_HANGING_SIGN:
-    price: 15.0
-  BIRCH_HANGING_SIGN:
-    price: 15.0
-  JUNGLE_HANGING_SIGN:
-    price: 15.0
-  ACACIA_HANGING_SIGN:
-    price: 15.0
-  DARK_OAK_HANGING_SIGN:
-    price: 15.0
-  MANGROVE_HANGING_SIGN:
-    price: 18.0
-  CHERRY_HANGING_SIGN:
-    price: 18.0
-  BAMBOO_HANGING_SIGN:
-    price: 18.0
-  CRIMSON_HANGING_SIGN:
-    price: 18.0
-  WARPED_HANGING_SIGN:
-    price: 18.0
-
-  # --- Beds ---
+    max-stock: 200
+  COBWEB:
+    price: 20.0
+    max-stock: 200
+  WHITE_DYE:
+    price: 4.0
+    max-stock: 2000
+  ORANGE_DYE:
+    price: 4.0
+    max-stock: 2000
+  MAGENTA_DYE:
+    price: 4.0
+    max-stock: 2000
+  LIGHT_BLUE_DYE:
+    price: 4.0
+    max-stock: 2000
+  YELLOW_DYE:
+    price: 4.0
+    max-stock: 2000
+  LIME_DYE:
+    price: 4.0
+    max-stock: 2000
+  PINK_DYE:
+    price: 4.0
+    max-stock: 2000
+  GRAY_DYE:
+    price: 4.0
+    max-stock: 2000
+  LIGHT_GRAY_DYE:
+    price: 4.0
+    max-stock: 2000
+  CYAN_DYE:
+    price: 4.0
+    max-stock: 2000
+  PURPLE_DYE:
+    price: 4.0
+    max-stock: 2000
+  BLUE_DYE:
+    price: 4.0
+    max-stock: 2000
+  BROWN_DYE:
+    price: 4.0
+    max-stock: 2000
+  GREEN_DYE:
+    price: 4.0
+    max-stock: 2000
+  RED_DYE:
+    price: 4.0
+    max-stock: 2000
+  BLACK_DYE:
+    price: 4.0
+    max-stock: 2000
   WHITE_BED:
     price: 60.0
+    max-stock: 300
   ORANGE_BED:
     price: 60.0
+    max-stock: 300
   MAGENTA_BED:
     price: 60.0
+    max-stock: 300
   LIGHT_BLUE_BED:
     price: 60.0
+    max-stock: 300
   YELLOW_BED:
     price: 60.0
+    max-stock: 300
   LIME_BED:
     price: 60.0
+    max-stock: 300
   PINK_BED:
     price: 60.0
+    max-stock: 300
   GRAY_BED:
     price: 60.0
+    max-stock: 300
   LIGHT_GRAY_BED:
     price: 60.0
+    max-stock: 300
   CYAN_BED:
     price: 60.0
+    max-stock: 300
   PURPLE_BED:
     price: 60.0
+    max-stock: 300
   BLUE_BED:
     price: 60.0
+    max-stock: 300
   BROWN_BED:
     price: 60.0
+    max-stock: 300
   GREEN_BED:
     price: 60.0
+    max-stock: 300
   RED_BED:
     price: 60.0
+    max-stock: 300
   BLACK_BED:
     price: 60.0
-
-  # --- Candles ---
+    max-stock: 300
   CANDLE:
     price: 20.0
+    max-stock: 500
   WHITE_CANDLE:
     price: 20.0
+    max-stock: 500
   ORANGE_CANDLE:
     price: 20.0
+    max-stock: 500
   MAGENTA_CANDLE:
     price: 20.0
+    max-stock: 500
   LIGHT_BLUE_CANDLE:
     price: 20.0
+    max-stock: 500
   YELLOW_CANDLE:
     price: 20.0
+    max-stock: 500
   LIME_CANDLE:
     price: 20.0
+    max-stock: 500
   PINK_CANDLE:
     price: 20.0
+    max-stock: 500
   GRAY_CANDLE:
     price: 20.0
+    max-stock: 500
   LIGHT_GRAY_CANDLE:
     price: 20.0
+    max-stock: 500
   CYAN_CANDLE:
     price: 20.0
+    max-stock: 500
   PURPLE_CANDLE:
     price: 20.0
+    max-stock: 500
   BLUE_CANDLE:
     price: 20.0
+    max-stock: 500
   BROWN_CANDLE:
     price: 20.0
+    max-stock: 500
   GREEN_CANDLE:
     price: 20.0
+    max-stock: 500
   RED_CANDLE:
     price: 20.0
+    max-stock: 500
   BLACK_CANDLE:
     price: 20.0
-
-  # --- Banners ---
+    max-stock: 500
   WHITE_BANNER:
     price: 100.0
+    max-stock: 200
   ORANGE_BANNER:
     price: 100.0
+    max-stock: 200
   MAGENTA_BANNER:
     price: 100.0
+    max-stock: 200
   LIGHT_BLUE_BANNER:
     price: 100.0
+    max-stock: 200
   YELLOW_BANNER:
     price: 100.0
+    max-stock: 200
   LIME_BANNER:
     price: 100.0
+    max-stock: 200
   PINK_BANNER:
     price: 100.0
+    max-stock: 200
   GRAY_BANNER:
     price: 100.0
+    max-stock: 200
   LIGHT_GRAY_BANNER:
     price: 100.0
+    max-stock: 200
   CYAN_BANNER:
     price: 100.0
+    max-stock: 200
   PURPLE_BANNER:
     price: 100.0
+    max-stock: 200
   BLUE_BANNER:
     price: 100.0
+    max-stock: 200
   BROWN_BANNER:
     price: 100.0
+    max-stock: 200
   GREEN_BANNER:
     price: 100.0
+    max-stock: 200
   RED_BANNER:
     price: 100.0
+    max-stock: 200
   BLACK_BANNER:
     price: 100.0
-
-  # --- Workstations ---
+    max-stock: 200
+  OAK_SIGN:
+    price: 5.0
+    max-stock: 1000
+  OAK_HANGING_SIGN:
+    price: 15.0
+    max-stock: 500
+  SPRUCE_SIGN:
+    price: 5.0
+    max-stock: 1000
+  SPRUCE_HANGING_SIGN:
+    price: 15.0
+    max-stock: 500
+  BIRCH_SIGN:
+    price: 5.0
+    max-stock: 1000
+  BIRCH_HANGING_SIGN:
+    price: 15.0
+    max-stock: 500
+  JUNGLE_SIGN:
+    price: 5.0
+    max-stock: 1000
+  JUNGLE_HANGING_SIGN:
+    price: 15.0
+    max-stock: 500
+  ACACIA_SIGN:
+    price: 5.0
+    max-stock: 1000
+  ACACIA_HANGING_SIGN:
+    price: 15.0
+    max-stock: 500
+  DARK_OAK_SIGN:
+    price: 5.0
+    max-stock: 1000
+  DARK_OAK_HANGING_SIGN:
+    price: 15.0
+    max-stock: 500
+  MANGROVE_SIGN:
+    price: 6.0
+    max-stock: 1000
+  MANGROVE_HANGING_SIGN:
+    price: 18.0
+    max-stock: 500
+  CHERRY_SIGN:
+    price: 6.0
+    max-stock: 1000
+  CHERRY_HANGING_SIGN:
+    price: 18.0
+    max-stock: 500
+  BAMBOO_SIGN:
+    price: 6.0
+    max-stock: 1000
+  BAMBOO_HANGING_SIGN:
+    price: 18.0
+    max-stock: 500
+  CRIMSON_SIGN:
+    price: 6.0
+    max-stock: 1000
+  CRIMSON_HANGING_SIGN:
+    price: 18.0
+    max-stock: 500
+  WARPED_SIGN:
+    price: 6.0
+    max-stock: 1000
+  WARPED_HANGING_SIGN:
+    price: 18.0
+    max-stock: 500
   CRAFTING_TABLE:
     price: 10.0
+    max-stock: 1000
   FURNACE:
     price: 15.0
+    max-stock: 1000
   BLAST_FURNACE:
     price: 80.0
+    max-stock: 500
   SMOKER:
     price: 50.0
+    max-stock: 500
   ANVIL:
     price: 100.0
+    max-stock: 200
   ENCHANTING_TABLE:
     price: 500.0
+    max-stock: 100
   BEACON:
     price: 8000.0
+    max-stock: 5
+    initial-stock: 1
   CHEST:
     price: 10.0
+    max-stock: 2000
   ENDER_CHEST:
     price: 150.0
+    max-stock: 100
   SHULKER_BOX:
     price: 1000.0
+    max-stock: 50
+    initial-stock: 10
   BARREL:
     price: 10.0
+    max-stock: 2000
   LOOM:
     price: 20.0
+    max-stock: 500
   CARTOGRAPHY_TABLE:
     price: 20.0
+    max-stock: 500
   FLETCHING_TABLE:
     price: 20.0
+    max-stock: 500
   SMITHING_TABLE:
     price: 50.0
+    max-stock: 200
   GRINDSTONE:
     price: 20.0
+    max-stock: 500
   STONECUTTER:
     price: 20.0
+    max-stock: 500
   CAULDRON:
     price: 100.0
+    max-stock: 300
   COMPOSTER:
     price: 15.0
+    max-stock: 500
   BREWING_STAND:
     price: 150.0
+    max-stock: 200
+  BUCKET:
+    price: 45.0
+    max-stock: 500
+  WATER_BUCKET:
+    price: 50.0
+    max-stock: 500
+  LAVA_BUCKET:
+    price: 60.0
+    max-stock: 500
+  MILK_BUCKET:
+    price: 60.0
+    max-stock: 500
+  POWDER_SNOW_BUCKET:
+    price: 60.0
+    max-stock: 500
+  EXPERIENCE_BOTTLE:
+    price: 50.0
+    max-stock: 1000
+  NAME_TAG:
+    price: 80.0
+    max-stock: 200
+  SADDLE:
+    price: 100.0
+    max-stock: 200
+  LEAD:
+    price: 15.0
+    max-stock: 500
+  FIREWORK_ROCKET:
+    price: 5.0
+    max-stock: 2000
+  FIREWORK_STAR:
+    price: 30.0
+    max-stock: 1000
+  OMINOUS_BOTTLE:
+    price: 100.0
+    max-stock: 16
+    initial-stock: 4
+  ARMOR_STAND:
+    price: 10.0
+    max-stock: 500
+  ITEM_FRAME:
+    price: 20.0
+    max-stock: 1000
+  GLOW_ITEM_FRAME:
+    price: 25.0
+    max-stock: 1000
+  PAINTING:
+    price: 15.0
+    max-stock: 500
+  FLOWER_POT:
+    price: 10.0
+    max-stock: 1000
+  END_ROD:
+    price: 50.0
+    max-stock: 200
+  CARROT_ON_A_STICK:
+    price: 30.0
+    max-stock: 100
+  WARPED_FUNGUS_ON_A_STICK:
+    price: 30.0
+    max-stock: 100
+  TUBE_CORAL_BLOCK:
+    price: 25.0
+    max-stock: 500
+  BRAIN_CORAL_BLOCK:
+    price: 25.0
+    max-stock: 500
+  BUBBLE_CORAL_BLOCK:
+    price: 25.0
+    max-stock: 500
+  FIRE_CORAL_BLOCK:
+    price: 25.0
+    max-stock: 500
+  HORN_CORAL_BLOCK:
+    price: 25.0
+    max-stock: 500
+  TORCH:
+    price: 2.0
+    max-stock: 5000
+  GLISTERING_MELON_SLICE:
+    price: 45.0
+    max-stock: 500
+  POPPED_CHORUS_FRUIT:
+    price: 10.0
+    max-stock: 1000
+  DRAGON_BREATH:
+    price: 20.0
+    max-stock: 64
+    initial-stock: 16
+  FERMENTED_SPIDER_EYE:
+    price: 15.0
+    max-stock: 500
+  ENDER_EYE:
+    price: 30.0
+    max-stock: 300
+  END_CRYSTAL:
+    price: 150.0
+    max-stock: 32
+    initial-stock: 8
+  FIRE_CHARGE:
+    price: 20.0
+    max-stock: 500
+  MUSIC_DISC_13:
+    price: 500.0
+    max-stock: 10
+    initial-stock: 2
+  MUSIC_DISC_CAT:
+    price: 500.0
+    max-stock: 10
+    initial-stock: 2
+  MUSIC_DISC_BLOCKS:
+    price: 500.0
+    max-stock: 10
+    initial-stock: 2
+  MUSIC_DISC_CHIRP:
+    price: 500.0
+    max-stock: 10
+    initial-stock: 2
+  MUSIC_DISC_FAR:
+    price: 500.0
+    max-stock: 10
+    initial-stock: 2
+  MUSIC_DISC_MALL:
+    price: 500.0
+    max-stock: 10
+    initial-stock: 2
+  MUSIC_DISC_MELLOHI:
+    price: 500.0
+    max-stock: 10
+    initial-stock: 2
+  MUSIC_DISC_STAL:
+    price: 500.0
+    max-stock: 10
+    initial-stock: 2
+  MUSIC_DISC_STRAD:
+    price: 500.0
+    max-stock: 10
+    initial-stock: 2
+  MUSIC_DISC_WARD:
+    price: 500.0
+    max-stock: 10
+    initial-stock: 2
+  MUSIC_DISC_11:
+    price: 500.0
+    max-stock: 10
+    initial-stock: 2
+  MUSIC_DISC_WAIT:
+    price: 500.0
+    max-stock: 10
+    initial-stock: 2
+  MUSIC_DISC_OTHERSIDE:
+    price: 800.0
+    max-stock: 10
+    initial-stock: 2
+  MUSIC_DISC_PIGSTEP:
+    price: 1200.0
+    max-stock: 5
+    initial-stock: 1
+  MUSIC_DISC_5:
+    price: 1500.0
+    max-stock: 5
+    initial-stock: 1
+  MUSIC_DISC_RELIC:
+    price: 1500.0
+    max-stock: 5
+    initial-stock: 1
+  MUSIC_DISC_CREATOR:
+    price: 1500.0
+    max-stock: 5
+    initial-stock: 1
+  MUSIC_DISC_PRECIPICE:
+    price: 1500.0
+    max-stock: 5
+    initial-stock: 1
+  DISC_FRAGMENT_5:
+    price: 100.0
+    max-stock: 64
+    initial-stock: 16
+  GOAT_HORN:
+    price: 150.0
+    max-stock: 16
+    initial-stock: 4
+  ECHO_SHARD:
+    price: 100.0
+    max-stock: 32
+    initial-stock: 8
+  NETHERITE_UPGRADE_SMITHING_TEMPLATE:
+    price: 2500.0
+    max-stock: 10
+    initial-stock: 2
