--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -106,6 +106,11 @@ restock:
   # Amount to restock (percentage of max stock)
   restock-percentage: 50
 
+  # Trigger Threshold (0.10 = 10%)
+  # Items will begin the restock timer when stock drops below this percentage of max stock.
+  # Set to 0.0 to only restock when completely empty.
+  trigger-threshold: 0.10
+
 # Stock Decay / Oversupply Reset (Decreases stock when full)
 # This allows players to sell items again if the shop stays full for too long.
 stock-decay:
