--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -42,6 +42,7 @@ restock:
   out-of-stock: "<gradient:#ff0000:#ff8800>Out of Stock!</gradient>"
   out-of-stock-purchase: "<gradient:#ff0000:#ff8800>Out of Stock for Purchase!</gradient>"
   can-still-sell: "&7You can still sell this item to the shop"
+  decay-countdown: "&7Stock Decay in: <gradient:#55ff55:#55ffff>%time%</gradient>"
 
 
 # Out of stock alert messages
